# cd-saas

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.repo_instructions/: commits.md  repo_notes.md  sessions.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py
backend/tests/: test_health.py
docs/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
