[project]
name = "cd-saas-backend"
version = "0.0.1"
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Включаем isort (I) и набор базовых правил
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]  # длина строки контролирует black

[tool.ruff.lint.isort]
# Важно: сказать ruff/isort, что наш код — пакет app
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "-q"
